--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -4,7 +4,8 @@
   "license": "SEE LICENSE IN <your-license-filename>",
   "repository": "<fill-your-repository-here>",
   "dependencies": {
-    "@nativescript/core": "file:../../node_modules/@nativescript/core"
+    "@nativescript/core": "file:../../node_modules/@nativescript/core",
+    "@nativescript/ruff-amap": "file:../../packages/ruff-amap"
   },
   "devDependencies": {
     "@nativescript/android": "~8.4.0",
