add android amap

--- a/tools/assets/App_Resources/Android/app.gradle
+++ b/tools/assets/App_Resources/Android/app.gradle
@@ -1,18 +1,25 @@
 // Add your native dependencies here:
 
 // Uncomment to add recyclerview-v7 dependency
-//dependencies {
-//	compile 'com.android.support:recyclerview-v7:+'
-//}
+dependencies {
+	// compile 'com.android.support:recyclerview-v7:+'
+}
 
 android {
-  compileSdkVersion 31
+  compileSdkVersion 32
   defaultConfig {
     minSdkVersion 21
-    targetSdkVersion 31
+    targetSdkVersion 32
     generatedDensities = []
+
   }
   aaptOptions {
     additionalParameters "--no-version-vectors"
   }
+}
+
+repositories {
+    flatDir {
+        dirs 'libs'
+    }
 }
