--- a/tools/assets/App_Resources/Android/src/main/AndroidManifest.xml
+++ b/tools/assets/App_Resources/Android/src/main/AndroidManifest.xml
@@ -1,42 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="__PACKAGE__"
-	android:versionCode="1"
-	android:versionName="1.0">
+  package="__PACKAGE__"
+  android:versionCode="1"
+  android:versionName="1.0">
 
-	<supports-screens
-		android:smallScreens="true"
-		android:normalScreens="true"
-		android:largeScreens="true"
-		android:xlargeScreens="true"/>
+  <supports-screens
+    android:smallScreens="true"
+    android:normalScreens="true"
+    android:largeScreens="true"
+    android:xlargeScreens="true" />
 
-	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-	<uses-permission android:name="android.permission.INTERNET"/>
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+  <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
-	<application
-		android:name="com.tns.NativeScriptApplication"
-		android:allowBackup="true"
-		android:icon="@drawable/icon"
-		android:label="@string/app_name"
-		android:theme="@style/AppTheme">
+  <!--允许访问网络，必选权限-->
+  <uses-permission android:name="android.permission.INTERNET" />
 
-		<activity
-			android:name="com.tns.NativeScriptActivity"
-			android:label="@string/title_activity_kimera"
-			android:configChanges="keyboard|keyboardHidden|orientation|screenSize|smallestScreenSize|screenLayout|locale|uiMode"
-			android:theme="@style/LaunchScreenTheme"
+  <!--允许获取粗略位置，若用GPS实现定位小蓝点功能则必选-->
+  <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
+  <!--允许获取设备和运营商信息，用于问题排查和网络定位，若无gps但仍需实现定位小蓝点功能则此权限必选-->
+  <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+
+  <!--允许获取网络状态，用于网络定位，若无gps但仍需实现定位小蓝点功能则此权限必选-->
+  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+  <!--允许获取wifi网络信息，用于网络定位，若无gps但仍需实现定位小蓝点功能则此权限必选-->
+  <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
+  <!--允许获取wifi状态改变，用于网络定位，若无gps但仍需实现定位小蓝点功能则此权限必选-->
+  <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+
+  <!--允许写入扩展存储，用于数据缓存，若无此权限则写到私有目录-->
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+  <!--允许写设备缓存，用于问题排查-->
+  <uses-permission android:name="android.permission.WRITE_SETTINGS" />
+
+  <!--允许读设备等信息，用于问题排查-->
+  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+  <application
+    android:name="com.tns.NativeScriptApplication"
+    android:allowBackup="true"
+    android:icon="@drawable/icon"
+    android:label="@string/app_name"
+    android:theme="@style/AppTheme">
+
+    <meta-data android:name="com.amap.api.v2.apikey"
+      android:value="af1a946ed44caee470e3a81eeb288b8c">
+    </meta-data>
+
+    <activity
+      android:name="com.tns.NativeScriptActivity"
+      android:label="@string/title_activity_kimera"
+      android:configChanges="keyboard|keyboardHidden|orientation|screenSize|smallestScreenSize|screenLayout|locale|uiMode"
+      android:theme="@style/LaunchScreenTheme"
       android:exported="true">
 
-			<meta-data android:name="SET_THEME_ON_LAUNCH" android:resource="@style/AppTheme" />
+      <meta-data android:name="SET_THEME_ON_LAUNCH" android:resource="@style/AppTheme" />
 
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
-				<category android:name="android.intent.category.LAUNCHER" />
-			</intent-filter>
-		</activity>
-		<activity android:name="com.tns.ErrorReportActivity"/>
-	</application>
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
+        <category android:name="android.intent.category.LAUNCHER" />
+      </intent-filter>
+    </activity>
+    <activity android:name="com.tns.ErrorReportActivity" />
+  </application>
 </manifest>
